--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,66 +1,167 @@
 ---
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+# SPDX-FileCopyrightText: GitHub, Inc.
+# SPDX-License-Identifier: MIT
+
+# Dependabot Configuration
+# Documentation: https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
 version: 2
+
 updates:
-  - package-ecosystem: "github-actions" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  # GitHub Actions Dependencies
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: monthly
+      interval: 'weekly'
+      day: 'monday'
+      time: '05:00'
+      timezone: 'UTC'
     groups:
       github-actions:
         patterns:
           - '*'
+    labels:
+      - 'dependencies'
+      - 'github-actions'
+      - 'security'
+    commit-message:
+      prefix: 'chore(deps)'
+      prefix-development: 'chore(deps-dev)'
+      include: 'scope'
     open-pull-requests-limit: 10
-    commit-message:
-      include: scope
-      prefix: fix(gha)
+    pull-request-branch-name:
+      separator: '/'
+    rebase-strategy: 'auto'
+    reviewers:
+      - 'jmuelbert'
+    target-branch: 'develop'
+    versioning-strategy: 'lockfile-only'
+    ignore:
+      - dependency-name: '*'
+        update-types: ['version-update:semver-major']
 
-  - package-ecosystem: "docker" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  # Python Dependencies
+  - package-ecosystem: 'pip'
+    directory: '/'
     schedule:
-      interval: "monthly"
+      interval: 'weekly'
+      day: 'monday'
+      time: '05:00'
+      timezone: 'UTC'
+    groups:
+      production-dependencies:
+        dependency-type: 'production'
+        update-types:
+          - 'minor'
+          - 'patch'
+      development-dependencies:
+        dependency-type: 'development'
+        update-types:
+          - 'minor'
+          - 'patch'
+    labels:
+      - 'dependencies'
+      - 'python'
     commit-message:
-      prefix: "fix(docker)"
+      prefix: 'chore(deps)'
+      prefix-development: 'chore(deps-dev)'
+      include: 'scope'
+    open-pull-requests-limit: 15
+    pull-request-branch-name:
+      separator: '/'
+    rebase-strategy: 'auto'
+    reviewers:
+      - 'jmuelbert'
+    allow:
+      - dependency-type: 'direct'
+      - dependency-type: 'indirect'
+    ignore:
+      - dependency-name: '*'
+        update-types: ['version-update:semver-major']
+    versioning-strategy: 'lockfile-only'
 
-  - package-ecosystem: "bundler" # See documentaton for possible values
-    directory: "/" # Location of package manifests
+  # Docker Dependencies
+  - package-ecosystem: 'docker'
+    directory: '/'
     schedule:
-      interval: "monthly"
+      interval: 'weekly'
+      day: 'monday'
+      time: '05:00'
+      timezone: 'UTC'
+    labels:
+      - 'dependencies'
+      - 'docker'
     commit-message:
-      prefix: "fix(bundler)"
+      prefix: 'chore(deps)'
+      include: 'scope'
+    ignore:
+      - dependency-name: '*'
+        update-types: ['version-update:semver-major']
 
-  # Maintain dependencies for nuget
-  - package-ecosystem: nuget # See documentation for possible values
-    directory: / # Location of package manifests
+  # NPM Dependencies for Documentation
+  - package-ecosystem: 'npm'
+    directory: '/docs'
     schedule:
-      interval: monthly
+      interval: 'monthly'
+      time: '05:00'
+      timezone: 'UTC'
+    groups:
+      documentation-dependencies:
+        patterns:
+          - '*'
+    labels:
+      - 'dependencies'
+      - 'documentation'
+      - 'javascript'
     commit-message:
-      prefix: fix(nuget)
+      prefix: 'chore(docs)'
+      include: 'scope'
+    open-pull-requests-limit: 5
+    pull-request-branch-name:
+      separator: '/'
+    rebase-strategy: 'auto'
+    versioning-strategy: 'increase'
+    ignore:
+      - dependency-name: '*'
+        update-types: ['version-update:semver-major']
 
-  # Maintain dependencies for pip
-  - package-ecosystem: pip # See documentation for possible values
-    directory: / # Location of package manifests
-    schedule:
-      interval: monthly
-    commit-message:
-      prefix: fix(pip)
+# Global Settings
+updates-maintainers:
+  - 'jmuelbert'
 
-  # Maintain dependencies for npm
-  - package-ecosystem: npm
-    directory: /
-    schedule:
-      interval: monthly
-    commit-message:
-      prefix: fix(npm)
+security-updates:
+  priority: 'high'
+  require-review: true
+  labels:
+    - 'security'
+    - 'dependencies'
+    - 'priority-high'
 
-  # Maintain dependencies for npm
-  - package-ecosystem: npm
-    directory: /pages
-    schedule:
-      interval: monthly
-    commit-message:
-      prefix: fix(npm for astrodoc)
+dependency-type:
+  production:
+    update-type: 'security'
+    allow:
+      - 'direct'
+  development:
+    update-type: 'all'
+    allow:
+      - 'direct'
+      - 'indirect'
+
+commit-message:
+  style: 'conventional'
+  scope: 'deps'
+
+pull-request:
+  template: '.github/PULL_REQUEST_TEMPLATE/dependency_update.md'
+  labels:
+    - 'dependencies'
+    - 'automated'
+  milestone: 'maintenance'
+  draft: false
+
+notifications:
+  slack:
+    channel: 'dependencies'
+    on-success: 'always'
+    on-failure: 'always'
