--- a/.github/workflows/add-comment-to-issue.yml
+++ b/.github/workflows/add-comment-to-issue.yml
@@ -1,48 +1,111 @@
----
 # SPDX-FileCopyrightText: GitHub, Inc. and contributors
 # SPDX-License-Identifier: MIT
-#
-name: "Add Comment to Issue"
 
-on: # yamllint disable-line rule:truth
+name: 'Issue Label Comment'
+
+on:
   issues:
     types: [labeled]
 
-permissions:
-  contents: read
+permissions: read-all
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.issue.number }}
+  cancel-in-progress: true
 
 jobs:
   add-comment:
+    name: Add Label Response
+    if: |
+      !github.event.issue.pull_request &&
+      contains(['help wanted', 'good first issue', 'bug', 'enhancement'], github.event.label.name)
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+
     permissions:
       issues: write
 
     steps:
-      - name: Add comment based on label
+      - name: 🔒 Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          egress-policy: audit
+
+      - name: 💬 Add Comment
         uses: peter-evans/create-or-update-comment@71345be0265236311c031f5c7866368bd1eff043 # v4.0.0
-        if: contains(['help wanted', 'good first issue'], github.event.label.name)
         with:
           issue-number: ${{ github.event.issue.number }}
           body: |
-            ${{ github.event.label.name == 'help wanted' && '
-            This issue is available for anyone to work on.
-            ' || '
-            This issue is a great way to kick-start your journey with our project, or to make a positive impact on open-source development. Jump in!
-            ' }}
+            ${{
+              github.event.label.name == 'help wanted' && '### 🤝 Help Wanted
 
-            - Read our [Contributing Guidelines](https://github.com/jmuelbert/checkconnect/.github/blob/main/.github/CONTRIBUTING.md)
-            - Make sure to **reference** this issue in your pull request
+              This issue is available for anyone to work on! We appreciate any help we can get.
 
-            **:sparkles: Thank you for your contribution! :sparkles:**
+              #### Getting Started:' ||
+              github.event.label.name == 'good first issue' && '### 🌟 Good First Issue
 
-  # https://github.com/marketplace/actions/alls-green#why
+              This is a perfect issue for first-time contributors! We will provide guidance and support.
+
+              #### Getting Started:' ||
+              github.event.label.name == 'bug' && '### 🐛 Bug Report
+
+              Thank you for reporting this bug. We will investigate this issue.
+
+              #### Next Steps:' ||
+              '### ✨ Enhancement
+
+              Thank you for suggesting this enhancement.
+
+              #### Next Steps:'
+            }}
+
+            1. 📖 Read our [Contributing Guidelines](https://github.com/${{ github.repository }}/blob/main/.github/CONTRIBUTING.md)
+            2. 🔍 Check existing [Pull Requests](https://github.com/${{ github.repository }}/pulls) to avoid duplicates
+            3. 🍴 Fork the repository and create a branch for your changes
+            4. ✅ Make your changes following our guidelines
+            5. 📝 Create a Pull Request referencing this issue (#${{ github.event.issue.number }})
+
+            ### Additional Resources
+            - [Code of Conduct](https://github.com/${{ github.repository }}/blob/main/.github/CODE_OF_CONDUCT.md)
+            - [Development Setup](https://github.com/${{ github.repository }}/blob/main/docs/DEVELOPMENT.md)
+            - [Discord Community](https://discord.gg/your-server) <!-- Add if applicable -->
+
+            <details>
+            <summary>Need help?</summary>
+
+            - Create a [Discussion](https://github.com/${{ github.repository }}/discussions) for questions
+            - Join our community chat
+            - Tag maintainers: @jmuelbert
+            </details>
+
+            ---
+            💝 Thank you for contributing to our project!
+
   verify:
     needs: add-comment
+    name: Verify Comment Addition
     runs-on: ubuntu-latest
     if: always()
+    timeout-minutes: 3
 
     steps:
-      - name: Verify job status
-        uses: re-actors/alls-green@223e4bb7a751b91f43eda76992bcfbf23b8b0302 # v1.2.2
+      - name: 🔒 Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          egress-policy: audit
+
+      - name: ✅ Verify Status
+        uses: re-actors/alls-green@223e4bb7a751b91f43eda76992bcfbf23b8b0302 # v2.2.0
         with:
           jobs: ${{ toJSON(needs) }}
+
+      - name: 📊 Report Failure
+        if: failure()
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
+            const issue = context.issue;
+            await github.rest.issues.createComment({
+              ...issue,
+              body: '❌ Failed to add automated comment. Please contact maintainers.'
+            });
