--- a/.github/workflows/codacy-analysis.yml
+++ b/.github/workflows/codacy-analysis.yml
@@ -13,18 +13,28 @@
 
 name: Codacy Security Scan
 
-on: # yamllint disable-line rule:truthy
+on:
   push:
-    branches: [main, develop, release]
-
+    branches: 
+      - main
+      - develop
+      - 'release/**'
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/*.md'
+      
   pull_request:
     types: [opened, synchronize, reopened]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/*.md'
 
   schedule:
-    - cron: 45 11 * * 5
+    - cron: '0 12 * * 1' # Run at 12:00 UTC every Monday
 
-permissions:
-  contents: read
+permissions: read-all
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -32,38 +42,50 @@ concurrency:
 
 jobs:
   codacy-security-scan:
-    # Skip any PR created by dependabot to avoid permission issues:
-    if: (githu.actor != 'dependabot[bot]')
+    if: |
+      github.actor != 'dependabot[bot]' &&
+      !contains(github.event.head_commit.message, '[skip ci]')
     name: Codacy Security Scan
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-
+      contents: read
+      security-events: write
+      actions: read
+      
     steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: 🧰 Checkout Source Code
-        uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
-
-      # Execute Codacy Analysis CLI and generate a SARIF output with the security issues identified during the analysis
-      - name: Run Codacy Analysis CLI
+      - name: 🔒 Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          egress-policy: audit
+          
+      - name: 🧰 Checkout Repository
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          fetch-depth: 1
+          
+      - name: 🔍 Run Codacy Analysis
         uses: codacy/codacy-analysis-cli-action@3ff8e64eb4b714c4bee91b7b4eea31c6fc2c4f93 # v4.3.0
         with:
-          # Check https://github.com/codacy/codacy-analysis-cli#project-token to get your project token from your Codacy repository
-          # You can also omit the token and run the tools that support default configurations
-          # project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           verbose: true
-          output: codeql-results.sarif
+          output: results/codacy-results.sarif
           format: sarif
-          # Adjust severity of non-security issues
           gh-code-scanning-compat: true
-          # Force 0 exit code to allow SARIF file generation
-          # This will handover control about PR rejection to the GitHub side
           max-allowed-issues: 2147483647
+          # project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Upload the SARIF file generated in the previous step
-      - name: 📤 Upload SARIF results file
+
+      - name: 📤 Upload SARIF Results
+        if: always()
         uses: github/codeql-action/upload-sarif@b7cec7526559c32f1616476ff32d17ba4c59b2d6 # v3.25.5
         with:
-          sarif_file: codeql-results.sarif
+          sarif_file: results/codacy-results.sarif
+          category: Codacy-Security
+
+      - name: 🧹 Cleanup
+        if: always()
+        run: |
+          rm -rf results/
