--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,51 +1,175 @@
 ---
 # SPDX-FileCopyrightText: Time Lucas
-#
 # SPDX-License-Identifier: ISC
-#
 
-name: Release Drafter
+name: Release Management
 
-on: # yamllint disable-line rule:truthy
+on:
   push:
-    branches: [main, develop, release, improve_build-workflow]
-
-  # pull_request event is required only for autolabeler
+    branches: 
+      - main
+      - develop
+      - 'release/**'
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/*.md'
+      
   pull_request:
-    # Only following types are handled by the action, but one can
-    # default to all as well
-    types: [opened, reopened, synchronize]
-    # pull_request_target event is required for autolabeler to
-    # support PRs from forks
-    # pull_request_target:
+    types: [opened, reopened, synchronize, labeled, unlabeled]
+    
+  workflow_dispatch:
+    inputs:
+      release-type:
+        description: 'Release type'
+        required: true
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+      draft:
+        description: 'Create as draft'
+        required: false
+        type: boolean
+        default: true
 
-permissions:
-  contents: read
+permissions: read-all
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
 
 jobs:
-  update_release_draft:
-    permissions:
-      # write permission is required to create a github release
-      contents: write
-      # write permission is required for autolabeler
-      # otherwise, read permission is required at least
-      pull-requests: write
-
+  update-release:
+    name: Update Release Draft
     runs-on: ubuntu-latest
-    steps:
-      # (Optional) GitHub Enterprise requires GHE_HOST variable set
-      #  s- name: Set GHE_HOST
-      #  run: |
-      #    echo "GHE_HOST=${GITHUB_SERVER_URL##https:\/\/}" >> $GITHUB_ENV
+    timeout-minutes: 10
 
-      # Drafts your next Release notes as Pull Requests are merged
-      # into "master"
-      - name: Release Drafter
+    permissions:
+      contents: write
+      pull-requests: write
+      discussions: write
+
+    outputs:
+      release-tag: ${{ steps.release-drafter.outputs.tag_name }}
+      release-url: ${{ steps.release-drafter.outputs.html_url }}
+
+    steps:
+      - name: 🔒 Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          egress-policy: audit
+
+      - name: 🧰 Checkout Repository
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          fetch-depth: 0
+
+      - name: 🏷️ Process Labels
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
+            const pr = context.payload.pull_request;
+            const title = pr.title.toLowerCase();
+            const body = pr.body?.toLowerCase() || '';
+            const labels = new Set();
+            
+            // Type labels
+            if (title.startsWith('feat:')) labels.add('feature');
+            if (title.startsWith('fix:')) labels.add('bug');
+            if (title.startsWith('docs:')) labels.add('documentation');
+            if (title.startsWith('chore:')) labels.add('maintenance');
+            if (title.startsWith('perf:')) labels.add('performance');
+            
+            // Breaking changes
+            if (body.includes('breaking change') || body.includes('breaking-change')) {
+              labels.add('breaking');
+            }
+            
+            // Size labels
+            const changes = pr.additions + pr.deletions;
+            if (changes > 500) labels.add('size/large');
+            else if (changes > 100) labels.add('size/medium');
+            else labels.add('size/small');
+            
+            if (labels.size > 0) {
+              await github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: pr.number,
+                labels: Array.from(labels)
+              });
+            }
+
+      - name: 📝 Update Release Draft
+        id: release-drafter
         uses: release-drafter/release-drafter@3f0f87098bd6b5c5b9a36d49c41d998ea58f9348 # v6.0.0
-        # (Optional) specify config name to use, relative to .github/.
-        # Default: release-drafter.yml
-        # with:
-        #   config-name: my-config.yml
-        #   disable-autolabeler: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          config-name: release-drafter.yml
+          version-resolver: ${{ github.event.inputs.release-type || 'patch' }}
+          draft: ${{ github.event.inputs.draft || 'true' }}
+
+      - name: 📊 Update Release Notes
+        if: success()
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
+            const releaseUrl = '${{ steps.release-drafter.outputs.html_url }}';
+            const releaseTag = '${{ steps.release-drafter.outputs.tag_name }}';
+            
+            // Create or update release discussion
+            const discussion = await github.rest.discussions.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: `Release ${releaseTag} Discussion`,
+              body: `## Release ${releaseTag} Planning
+              
+              The next release is being drafted at [${releaseTag}](${releaseUrl})
+              
+              ### 📋 Checklist
+              - [ ] All tests passing
+              - [ ] Documentation updated
+              - [ ] Change log reviewed
+              - [ ] Security checks completed
+              
+              ### 🔄 Timeline
+              - Draft started: ${new Date().toISOString()}
+              - Target release date: TBD
+              
+              Please add any feedback or concerns about this release.`,
+              category_id: 'DIC_kwDOA1_2Gs4CU1bp'  # Update with your discussion category ID
+            });
+
+  notify:
+    needs: update-release
+    if: success()
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: 📢 Notify Team
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
+            const message = `## 📦 Release Update
+            
+            A new release draft has been updated:
+            - Tag: ${process.env.RELEASE_TAG}
+            - URL: ${process.env.RELEASE_URL}
+            
+            Please review the draft and provide feedback.`;
+            
+            // Create issue for release notification
+            await github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: `Release Draft Update: ${process.env.RELEASE_TAG}`,
+              body: message,
+              labels: ['release', 'needs-review']
+            });
+        env:
+          RELEASE_TAG: ${{ needs.update-release.outputs.release-tag }}
+          RELEASE_URL: ${{ needs.update-release.outputs.release-url }}
