--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,40 +1,232 @@
 ---
 # SPDX-FileCopyrightText: GitHub, Inc. and contributors
-#
 # SPDX-License-Identifier: MIT
-#
 
-name: Close stale issues and PRs
+name: Issue Activity Management
 
-on: # yamllint disable-line rule:truthy
+on:
   schedule:
-    - cron: 45 1 * * *
+    - cron: '0 1 * * *'  # Run at 01:00 UTC daily
+    
+  workflow_dispatch:
+    inputs:
+      dry-run:
+        description: 'Perform dry run'
+        required: false
+        type: boolean
+        default: true
 
-permissions:
-  checks: read
+permissions: read-all
+
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: false
 
 jobs:
-  stale:
+  stale-management:
+    name: Process Inactive Items
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+
     permissions:
-      contents: write # only for delete-branch option
       issues: write
       pull-requests: write
+      contents: write
+
+    outputs:
+      stale-issues: ${{ steps.stale.outputs.stale-issues-count }}
+      stale-prs: ${{ steps.stale.outputs.stale-prs-count }}
+      closed-issues: ${{ steps.stale.outputs.closed-issues-count }}
+      closed-prs: ${{ steps.stale.outputs.closed-prs-count }}
+
     steps:
-      - uses: actions/stale@28ca1036281a5e5922ead5184a1bbf96e5fc984e # v9.0.0
+      - name: 🔒 Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
         with:
-          stale-issue-message: This issue is stale because it has been open 30 days with no activity. Remove stale label or comment or this will be closed in 5 days.
-          stale-pr-message: This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 10 days.
-          stale-issue-label: no-issue-activity
-          stale-pr-label: no-pr-activity
-          exempt-issue-labels: awaiting-approval,work-in-progress
-          exempt-pr-labels: awaiting-approval,work-in-progress
-          exempt-issue-milestones: future,alpha,beta
-          exempt-pr-milestones: bugfix,improvement
-          only-labels: awaiting-feedback,awaiting-answers
-          close-issue-message: This issue was closed because it has been stalled for 5 days with no activity.
-          close-pr-message: This PR was closed because it has been stalled for 10 days with no activity.
+          egress-policy: audit
+
+      - name: 🔍 Process Stale Items
+        id: stale
+        uses: actions/stale@28ca1036281a5e5922ead5184a1bbf96e5fc984e # v9.0.0
+        with:
+          # Issue Configuration
+          stale-issue-message: |
+            👋 This issue has been automatically marked as stale because it has had no activity in the last 30 days.
+            
+            ## What happens next?
+            - If no further activity occurs, this issue will be closed in 5 days
+            - Add a comment or update the issue to prevent closure
+            - Remove the `no-issue-activity` label to prevent closure
+            
+            ## Why was this marked stale?
+            We automatically mark issues as stale to:
+            - Keep our issue tracker organized and relevant
+            - Focus on active issues
+            - Identify resolved or abandoned issues
+            
+            Thank you for your contributions! 🙏
+          
+          # PR Configuration
+          stale-pr-message: |
+            👋 This pull request has been automatically marked as stale because it has had no activity in the last 45 days.
+            
+            ## What happens next?
+            - If no further activity occurs, this PR will be closed in 10 days
+            - Add a comment or update the PR to prevent closure
+            - Remove the `no-pr-activity` label to prevent closure
+            
+            ## Why was this marked stale?
+            We automatically mark PRs as stale to:
+            - Keep our PR queue manageable
+            - Focus on active contributions
+            - Identify abandoned PRs
+            
+            Need help completing this PR? Let us know in a comment! 🤝
+          
+          # Labels
+          stale-issue-label: 'no-issue-activity'
+          stale-pr-label: 'no-pr-activity'
+          
+          # Exempt Labels
+          exempt-issue-labels: |
+            pinned
+            security
+            awaiting-approval
+            work-in-progress
+            good-first-issue
+            help-wanted
+            documentation
+          exempt-pr-labels: |
+            pinned
+            security
+            awaiting-approval
+            work-in-progress
+            dependencies
+          
+          # Exempt Milestones
+          exempt-issue-milestones: |
+            future
+            roadmap
+            backlog
+          exempt-pr-milestones: |
+            next-release
+            current-sprint
+          
+          # Only process items with these labels
+          only-labels: |
+            awaiting-feedback
+            needs-info
+            awaiting-answers
+          
+          # Close Messages
+          close-issue-message: |
+            ⚠️ This issue has been automatically closed due to continued inactivity.
+            
+            - It was marked as stale 5 days ago
+            - No activity has occurred since then
+            
+            You can still:
+            - Reopen this issue if it's still relevant
+            - Create a new issue with updated information
+            
+            Thank you for your understanding!
+          
+          close-pr-message: |
+            ⚠️ This pull request has been automatically closed due to continued inactivity.
+            
+            - It was marked as stale 10 days ago
+            - No activity has occurred since then
+            
+            You can still:
+            - Reopen this PR if you plan to continue working on it
+            - Create a new PR with your changes
+            
+            Thank you for your contributions!
+          
+          # Timing Configuration
           days-before-issue-stale: 30
           days-before-pr-stale: 45
           days-before-issue-close: 5
           days-before-pr-close: 10
+          
+          # Additional Settings
+          delete-branch: true
+          enable-statistics: true
+          operations-per-run: 100
+          ascending: true
+          remove-stale-when-updated: true
+          debug-only: ${{ inputs.dry-run }}
+
+      - name: 📊 Generate Activity Report
+        if: always()
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
+            const stats = {
+              staleIssues: parseInt('${{ steps.stale.outputs.stale-issues-count }}') || 0,
+              stalePRs: parseInt('${{ steps.stale.outputs.stale-prs-count }}') || 0,
+              closedIssues: parseInt('${{ steps.stale.outputs.closed-issues-count }}') || 0,
+              closedPRs: parseInt('${{ steps.stale.outputs.closed-prs-count }}') || 0
+            };
+            
+            const report = `## 📊 Activity Management Report
+            
+            ### Statistics
+            - Stale Issues: ${stats.staleIssues}
+            - Stale PRs: ${stats.stalePRs}
+            - Closed Issues: ${stats.closedIssues}
+            - Closed PRs: ${stats.closedPRs}
+            
+            ### Configuration
+            - Issue Stale Period: 30 days
+            - PR Stale Period: 45 days
+            - Issue Grace Period: 5 days
+            - PR Grace Period: 10 days
+            
+            ### Actions Taken
+            ${stats.staleIssues + stats.stalePRs > 0 ? '⚠️ Items marked as stale' : '✅ No items marked as stale'}
+            ${stats.closedIssues + stats.closedPRs > 0 ? '🔒 Items closed due to inactivity' : ''}
+            
+            ### Need Help?
+            - Review our [Contributing Guidelines](../../CONTRIBUTING.md)
+            - Join our [Discord Community](https://discord.gg/your-server)
+            - Contact the maintainers
+            `;
+            
+            // Create issue if significant activity
+            if (stats.closedIssues + stats.closedPRs > 0) {
+              await github.rest.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: `Activity Management Report - ${new Date().toISOString().split('T')[0]}`,
+                body: report,
+                labels: ['maintenance', 'automated']
+              });
+            }
+
+  notify:
+    needs: stale-management
+    if: |
+      always() && 
+      (needs.stale-management.outputs.closed-issues > 0 || 
+       needs.stale-management.outputs.closed-prs > 0)
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: 📢 Notify Team
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
+            const message = `## 🔔 Activity Management Alert
+            
+            Items closed due to inactivity:
+            - Issues: ${process.env.CLOSED_ISSUES}
+            - PRs: ${process.env.CLOSED_PRS}
+            
+            Please review the [activity report](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/issues?q=label:maintenance+label:automated)`;
+            
+            // Add notification methods here (e.g., Discord, Slack, etc.)
+            console.log(message);
+        env:
+          CLOSED_ISSUES: ${{ needs.stale-management.outputs.closed-issues }}
+          CLOSED_PRS: ${{ needs.stale-management.outputs.closed-prs }}
