--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,33 +1,31 @@
-# Configuration file for MegaLinter
-#
-# See all available variables at https://megalinter.io/latest/configuration/ and in
-# linters documentation
+---
+# MegaLinter Configuration File
+# See all available variables at https://megalinter.io/configuration/
 
-# all, none, or list of linter keys
 APPLY_FIXES: all
-# If you use ENABLE variable, all other languages/formats/tooling-formats will
-# be disabled by default
-# ENABLE:
-
-# If you use ENABLE_LINTERS variable, all other linters will be disabled by
-# default
-# ENABLE_LINTERS:
+FAIL_IF_MISSING_LINTER_IN_FLAVOR: true
 DISABLE_LINTERS:
-  - CSHARP_DOTNET_FORMAT
-  - GHERKIN_GHERKIN_LINT
-  - REPOSITORY_SYFT
-# DISABLE:
-# - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
-# - SPELL # Uncomment to disable checks of spelling mistakes
-EDITORCONFIG_FILTER_REGEX_EXCLUDE: (LICENSE|LICENSES/|AUTHORS|\.github/PULL_REQUEST_TEMPLATE.md|\.github/actions/spelling/advice.md)
-JSON_JSONLINT_FILTER_REGEX_EXCLUDE: (\.vscode/|\.devcontainer/devcontainer.json)
-JSON_V8R_FILTER_REGEX_EXCLUDE: (\.devcontainer/devcontainer.json|\.vscode/)
-SPELL_CSPELL_FILTER_REGEX_EXCLUDE: (docs/de|docs/es|docs/it|LICENSE)
-SPELL_LYCHEE_FILTER_REGEX_EXCLUDE: (\.github/workflows/|\.github/actions/|docs/pnpm-lock.yaml)
-SPELL_VALE_FILTER_REGEX_INCLUDE: (README.md|docs/astro.config.mjs|docs/src/content)
-MARKDOWN_MARKDOWNLINT_FILTER_REGEX_EXCLUDE: (\.github/actions/spelling)
-YAML_YAMLLINT_FILTER_REGEX_EXCLUDE: (docs/pnpm-lock.yaml)
+  - SPELL_CSPELL
+  - SPELL_MISSPELL
+
 SHOW_ELAPSED_TIME: true
 FILEIO_REPORTER: false
-# Uncomment if you want MegaLinter to detect errors but not block CI to pass
-# DISABLE_ERRORS: true
+UPDATED_SOURCES_REPORTER: true
+TEXT_REPORTER: true
+SARIF_REPORTER: true
+
+PYTHON_BLACK_ARGUMENTS:
+  - "--config=pyproject.toml"
+
+PYTHON_PYLINT_ARGUMENTS:
+  - "--rcfile=.pylintrc"
+
+PYTHON_ISORT_ARGUMENTS:
+  - "--settings-file=.isort.cfg"
+
+MARKDOWN_MARKDOWNLINT_CONFIG_FILE: .markdownlint.json
+YAML_YAMLLINT_CONFIG_FILE: .yamllint.yml
+
+DISABLE_ERRORS_IF_LESS_THAN: 0
+
+REPORT_OUTPUT_FOLDER: megalinter-reports
