--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ readme = "README.md"
 requires-python = ">=3.9"
 license = "GPL-3.0-or-later"
 maintainers = [
-  { name = "Jürgen Mülbert" },
-  { email = "juergen.muelbert@outlook.de" },
+    { name = "Jürgen Mülbert" },
+    { email = "juergen.muelbert@outlook.de" },
 ]
 authors = [{ name = "Jürgen Mülbert", email = "juergen.muelbert@outlook.de" }]
 # Pypi classifiers: https://pypi.org/classifiers/
@@ -43,6 +43,7 @@ keywords = [
 dependencies = [
     "click>=8.0",
     "pyside6>=6.0",
+    "pydantic>=2.10.3",
     "sqlalchemy>=2.0.0",
     "pydantic>=2.0.0",
 ]
@@ -65,14 +66,14 @@ dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "ruff>=0.1.3",
-    "pre-commit>=5.0.0"
+    "pre-commit>=5.0.0",
 ]
 
 [tool.hatch.version]
 path = "src/jmbde/__about__.py"
 
 [project.scripts]
-jmbde = "jmbde.main:main"
+jmbde = "jmbde.__main:main"
 
 [tool.hatch.build.targets.sdist]
 exclude = ["/.github", "/backend", "/scripts"]
@@ -84,7 +85,7 @@ packages = ["src/jmbde"]
 [tool.hatch.envs.default]
 installer = "uv"
 dependencies = ["pytest", "pytest-cov"]
-scripts = {run = "python -m jmbde.main"}
+scripts = { run = "python -m jmbde.main" }
 
 [tool.hatch.envs.lint]
 dependencies = ["black>=23.7.0", "mypy>=1.6.1", "isort>=5.12.0", "ruff>=0.1.3"]
